--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- Heading -->
+    <h2 id="verification_heading">Verify Your Account</h2>
+    <p id="verification_subtext">
+        Please enter the 6-digit OTP sent to your registered number
+    </p>
 
+    <!-- OTP Container -->
+    <div class="code-container">
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+        <input type="text" maxlength="1" class="code" />
+    </div>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
