--- a/main.html
+++ b/main.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Entry</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- Heading -->
     <h2 id="verification_heading">Verify Your Account</h2>
-    <p id="verification_subtext">
-        Please enter the 6-digit OTP sent to your registered number
-    </p>
+    <h5 id="verification_subtext">We emailed you the OTP</h5>
 
-    <!-- OTP Container -->
     <div class="code-container">
-        <input type="text" maxlength="1" class="code" />
-        <input type="text" maxlength="1" class="code" />
-        <input type="text" maxlength="1" class="code" />
-        <input type="text" maxlength="1" class="code" />
-        <input type="text" maxlength="1" class="code" />
-        <input type="text" maxlength="1" class="code" />
+        <input class="code" type="number" min="0" max="9" placeholder="0">
+        <input class="code" type="number" min="0" max="9" placeholder="0">
+        <input class="code" type="number" min="0" max="9" placeholder="0">
+        <input class="code" type="number" min="0" max="9" placeholder="0">
+        <input class="code" type="number" min="0" max="9" placeholder="0">
+        <input class="code" type="number" min="0" max="9" placeholder="0">
     </div>
 
-    <script type="text/javascript" src="./script.js"></script>
+    <script src="./otpEntry.js"></script>
 </body>
 </html>
