--- a/main.html
+++ b/main.html
@@ -1,24 +1,24 @@
-<!-- OTP Entry Frontend  -->
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP Entry</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2 id="verification_heading"> Verify Your Account</h2>
-    <h5 id="verification_subtext"> We emailed you the OTP</h5>
+
+    <h2 id="verification_heading">Verify Your Account</h2>
+    <h5 id="verification_subtext">We emailed you the OTP to verify your account</h5>
 
     <div class="code-container">
-        <input class="code" id="code-1" type="number" min="0" max="9" placeholder="0" required>
-        <input class="code" id="code-2" type="number" min="0" max="9" placeholder="0" required>
-        <input class="code" id="code-3" type="number" min="0" max="9" placeholder="0" required>
-        <input class="code" id="code-4" type="number" min="0" max="9" placeholder="0" required>
-        <input class="code" id="code-5" type="number" min="0" max="9" placeholder="0" required>
-        <input class="code" id="code-6" type="number" min="0" max="9" placeholder="0" required>
+        <input type="number" class="code" />
+        <input type="number" class="code" />
+        <input type="number" class="code" />
+        <input type="number" class="code" />
+        <input type="number" class="code" />
+        <input type="number" class="code" />
     </div>
 
-    <script src="./otpEntry.js"></script>
+    <script src="script.js"></script>
 </body>
-</html> 
+</html>
